@@ -1,3 +1,7 @@
+2007-12-07  Tim Vandermeersch  <tim.vandermeersch@gmail.com>
+
+	* avogadro/src/extensions/*: Added conformer search dialog. 
+
 2007-12-07  Geoffrey Hutchison  <babel@geoffhutchison.net>
 
 	* libavogadro/src/elementtranslate.[h,cpp]: New class to handle
@@ -9,8 +13,6 @@
 
 	* libavogadro/src/tools/periodictablegv.cpp: Use the new
 	translation feature.
-
-	* libavogadro/src/engines/labelengine.cpp: Ditto.
 
 2007-12-07  Tim Vandermeersch  <tim.vandermeersch@gmail.com>
 
